--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "express-async-handler": "^1.1.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.9",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-paypal-button": "^4.1.1",
