--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
   },
   "homepage": "https://github.com/omgonzales/shop-mern#readme",
   "dependencies": {
+    "@types/jest": "^26.0.16",
+    "@types/node": "^14.14.10",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "dotenv": "^8.2.0",
@@ -37,7 +41,8 @@
     "react-dom": "^16.8.0",
     "react-paypal-button": "^4.1.1",
     "react-paypal-button-v2": "^2.6.2",
-    "react-scripts": "^4.0.0"
+    "react-scripts": "^4.0.0",
+    "typescript": "^4.1.2"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
