--- a/package.json
+++ b/package.json
@@ -26,8 +26,6 @@
   "dependencies": {
     "@types/jest": "^26.0.16",
     "@types/node": "^14.14.10",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "dotenv": "^8.2.0",
@@ -45,6 +43,9 @@
     "typescript": "^4.1.2"
   },
   "devDependencies": {
+    "@types/reach__router": "^1.3.6",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "concurrently": "^5.3.0",
     "nodemon": "^2.0.5"
   }
